# advent_of_code2022

./: Cargo.toml  README.md
src/: day1_2.rs  day2_1.rs  day2_2.rs  day3_1.rs  day3_2.rs  day4_1.rs  day4_2.rs  main.rs
