[package]
name = "advent_of_code2022"
version = "0.1.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/cmdcolin/advent_of_code2022"



[[bin]]
name = "day1_1"
path = "src/day1_1.rs"

[[bin]]
name = "day1_2"
path = "src/day1_2.rs"

[[bin]]
name = "day2_1"
path = "src/day2_1.rs"


[[bin]]
name = "day2_2"
path = "src/day2_2.rs"
